tests/errors/test_05.x
// Incompatible type for assignment

fn main() -> i64 {
    let x: i64 = true;
    let y: bool = 21;
    let z: char = "hello";
}